Fixed a tiny little layout bug in IE render of atlas box

--- a/src/main/webapp/assets/stylesheets/ae_index.css
+++ b/src/main/webapp/assets/stylesheets/ae_index.css
@@ -212,6 +212,10 @@
     float: left;
 }
 
+#atlas_updn_fset label {
+    width: 100%;
+}
+
 #atlas_updn_fset select {
     margin-bottom: 0;
 }
